[gd_scene load_steps=5 format=3 uid="uid://cmo55kstl4usv"]

[ext_resource type="Script" path="res://Scripts/inventory_slot.gd" id="1_khgd4"]
[ext_resource type="Texture2D" uid="uid://c2ak3yck2x6t1" path="res://UI/images/MARS-2K.webp" id="2_83dve"]
[ext_resource type="FontFile" uid="uid://ckxuqg6tbldv3" path="res://UI/font/Esperanto SmallCaps Regular.ttf" id="3_adbbi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1amcy"]

[node name="Inventory_Slot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -1062.0
offset_bottom = -558.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_khgd4")

[node name="Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.716296, 0.716296, 0.716296, 1)

[node name="Inside" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.581033, 0.581033, 0.581033, 1)

[node name="ItemIcon" type="Sprite2D" parent="Inside"]
texture_filter = 3
position = Vector2(35, 41)
scale = Vector2(0.176169, 0.181985)
texture = ExtResource("2_83dve")

[node name="ItemQuantity" type="Label" parent="Inside"]
texture_filter = 1
layout_mode = 1
offset_left = 1.0
offset_top = -15.0
offset_right = 14.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("3_adbbi")
theme_override_font_sizes/font_size = 40
text = "-"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_1amcy")

[node name="DetailsPanel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 102.0
offset_right = 302.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.768627)

[node name="ItemName" type="Label" parent="DetailsPanel"]
texture_filter = 1
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 65.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("3_adbbi")
theme_override_font_sizes/font_size = 20
text = "NAME"

[node name="ItemDesc" type="Label" parent="DetailsPanel"]
texture_filter = 1
layout_mode = 0
offset_left = 10.0
offset_top = 78.0
offset_right = 106.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("3_adbbi")
theme_override_font_sizes/font_size = 20
text = "Description"

[node name="ItemWeight" type="Label" parent="DetailsPanel"]
texture_filter = 1
layout_mode = 0
offset_left = 10.0
offset_top = 174.0
offset_right = 84.0
offset_bottom = 197.0
theme_override_fonts/font = ExtResource("3_adbbi")
theme_override_font_sizes/font_size = 20
text = "WEIGHT"

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
